implement Company, Publisher, and Interaction classes

--- a/interaction.ipynb
+++ b/interaction.ipynb
@@ -59,15 +59,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auction.get_click_through_rates()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Company:\n",
-    "    def __init__(self, pricing_agent, bidding_agent, budget):\n",
+    "    def __init__(self, pricing_agent, bidding_agent, budget, valuation, product_cost):\n",
     "        self.pricing_agent = pricing_agent\n",
     "        self.bidding_agent = bidding_agent\n",
     "        self.budget = budget\n",
+    "        self.valuation = valuation\n",
+    "        self.product_cost = product_cost\n",
     "    \n",
     "    def set_price(self):\n",
     "        return self.pricing_agent.set_price()\n",
@@ -75,15 +97,28 @@
     "    def bid(self):\n",
     "        return self.bidding_agent.bid()\n",
     "    \n",
-    "    def update_pricing_strategy(self, purchased: bool):\n",
-    "        self.pricing_agent.update(purchased)\n",
+    "    def update_pricing_strategy(self, purchase_reward: int):\n",
+    "        self.pricing_agent.update(purchase_reward)\n",
     "\n",
-    "    def update_bidding_strategy(self, auction_results: bool, click_event, cost, n_slot=-1):\n",
-    "        # auction_results: True if the company won the auction\n",
-    "        # click_event: True if the user clicked on the ad\n",
-    "        # cost: the auction payment\n",
-    "        # n_slot: the slot in which the ad was shown\n",
-    "        self.bidding_agent.update(auction_results, click_event, cost, n_slot)"
+    "    def update_bidding_strategy(self, auction_results):\n",
+    "        # Compute utility and cost\n",
+    "        f_t, c_t = self._compute_utility_and_cost(auction_results)\n",
+    "        m_t = auction_results['m_t']\n",
+    "\n",
+    "        # Update bidding strategy\n",
+    "        self.bidding_agent.update(f_t, c_t, m_t)\n",
+    "    \n",
+    "    def _compute_utility_and_cost(self, auction_results):\n",
+    "        win = auction_results['company_win']\n",
+    "        m_t = auction_results['m_t']\n",
+    "\n",
+    "        # Compute utility\n",
+    "        f_t = (self.valuation - m_t) * win\n",
+    "\n",
+    "        # Compute cost\n",
+    "        c_t = m_t * win\n",
+    "\n",
+    "        return f_t, c_t"
    ]
   },
   {
@@ -93,18 +128,41 @@
    "outputs": [],
    "source": [
     "class Publisher:\n",
+    "    # The company index is always 0, as the company bid is the first one\n",
+    "    COMPANY_INDEX = 0\n",
+    "\n",
     "    def __init__(self, auction, competitors):\n",
     "        self.auction = auction\n",
     "        self.competitors = competitors\n",
     "    \n",
     "    def round(self, bid):\n",
-    "        bids = np.append(bid, self.competitors.get_bids())\n",
+    "        # Get the competitor bids and the maximum among them\n",
+    "        competitor_bids, m_t = self.competitors.get_bids()\n",
+    "\n",
+    "        # Append the competitor bids to the company's bid\n",
+    "        bids = np.append(bid, competitor_bids)\n",
+    "\n",
+    "        # Run the auction\n",
     "        winners, payments_per_click = self.auction.round(bids)\n",
+    "        \n",
+    "        # Check if the company won the auction, and if so, the slot in which the ad was shown\n",
+    "        company_win = self.COMPANY_INDEX in winners\n",
+    "        company_slot = np.where(winners == self.COMPANY_INDEX)[0][0] if company_win else -1\n",
     "\n",
-    "        # TODO: continue\n",
-    "        ...\n",
+    "        # Get the company's click through rate\n",
+    "        ctrs = self.auction.get_click_through_rates()\n",
+    "        company_ctr = ctrs[self.COMPANY_INDEX]\n",
     "\n",
-    "        return"
+    "        # Simulate the click outcome (True if the user clicked on the ad)\n",
+    "        click_outcome = np.random.rand() < company_ctr\n",
+    "\n",
+    "        auction_results = {\n",
+    "            'company_win': company_win,\n",
+    "            'company_slot': company_slot,\n",
+    "            'm_t': m_t\n",
+    "        }\n",
+    "\n",
+    "        return auction_results, click_outcome"
    ]
   },
   {
@@ -116,6 +174,8 @@
     "class Competitors:\n",
     "    # TODO: implement\n",
     "    # Define behavior, distributions to sample bids from, etc...\n",
+    "    # Best to define a Competitors abstract class, and then implement different strategies\n",
+    "    # Such as StochasticCompetitors, AdversarialCompetitors, etc...\n",
     "    ..."
    ]
   },
@@ -126,28 +186,35 @@
    "outputs": [],
    "source": [
     "class Interaction:\n",
-    "    def __init__(self, company, publisher, competitors, customer):\n",
+    "    def __init__(self, company, publisher, customer):\n",
     "        self.company = company\n",
     "        self.publisher = publisher\n",
-    "        self.competitors = competitors\n",
     "        self.customer = customer\n",
     "    \n",
     "    def day(self, n_users):\n",
     "        # Simulates a day, made up of multiple auctions\n",
     "\n",
     "        # Company sets a price\n",
-    "        self.company.set_price()\n",
+    "        price = self.company.set_price()\n",
     "\n",
     "        # Company faces a series of auctions\n",
     "        for user in range(n_users):\n",
     "            # Company bids\n",
     "            bid = self.company.bid()\n",
     "\n",
-    "            # Publisher runs the auction\n",
-    "            something, to_be_returned = self.publisher.round(bid)\n",
+    "            # Publisher runs the auction and simulates the click outcome\n",
+    "            auction_results, click_outcome = self.publisher.round(bid)\n",
     "\n",
-    "            # TODO: continue\n",
-    "            ..."
+    "            # Update the company's bidding strategy\n",
+    "            self.company.update_bidding_strategy(auction_results)\n",
+    "\n",
+    "            # Update the company's pricing strategy, but only if the user clicked on the ad\n",
+    "            if click_outcome:\n",
+    "                purchase_reward = self.customer.check_purchase(price) # 1 if the user purchased, 0 otherwise\n",
+    "                self.company.update_pricing_strategy(purchase_reward)\n",
+    "\n",
+    "    # TODO: continue if there's more to do\n",
+    "    ..."
    ]
   },
   {
