add documentation and implement stochastic competitors

--- a/interaction.ipynb
+++ b/interaction.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +177,90 @@
     "    # Best to define a Competitors abstract class, and then implement different strategies\n",
     "    # Such as StochasticCompetitors, AdversarialCompetitors, etc...\n",
     "    ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Competitors:\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        pass\n",
+    "\n",
+    "    def get_bids(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StochasticCompetitors(Competitors):\n",
+    "    def __init__(self, n_competitors, distribution):\n",
+    "        self.n_competitors = n_competitors\n",
+    "        self.distribution = distribution\n",
+    "\n",
+    "    def get_bids(self):\n",
+    "        # Sample bids from the distribution\n",
+    "        bids = self.distribution(self.n_competitors)\n",
+    "\n",
+    "        # Get the maximum bid\n",
+    "        m_t = np.max(bids)\n",
+    "\n",
+    "        return bids, m_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.5488135 , 0.71518937, 0.60276338, 0.54488318, 0.4236548 ]),\n",
+       " 0.7151893663724195)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(0)\n",
+    "\n",
+    "distribution = lambda n_competitors: np.random.uniform(0, 1, n_competitors)\n",
+    "\n",
+    "n_competitors = 5\n",
+    "competitors = StochasticCompetitors(n_competitors, distribution)\n",
+    "\n",
+    "competitors.get_bids()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0.67781654, 0.27000797, 0.73519402, 0.96218855, 0.24875314]),\n",
+       " 0.9621885451174382)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "competitors.get_bids()"
    ]
   },
   {
