Sistema un po' di set ups per il requirement 4

--- a/project4_submission.ipynb
+++ b/project4_submission.ipynb
@@ -706,6 +706,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Simple case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_users = 1000\n",
+    "lambdas = [1] # 3 slots\n",
+    "valuations = [1]\n",
+    "rho = 0.4\n",
+    "budget = n_users * rho\n",
+    "\n",
+    "problem_params = {\"n_users\" : n_users, \"lambdas\" : lambdas,\n",
+    "                 \"budget\" : budget, \"valuations\" : valuations,\n",
+    "                 \"name_file\" : \"simple_case\"}\n",
+    "\n",
+    "random.seed(42)\n",
+    "\n",
+    "req = Requirement4(problem_params)\n",
+    "req.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Standard case"
    ]
   },
@@ -715,7 +744,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_users = 10000\n",
+    "n_users = 1000\n",
     "lambdas = [0.8, 0.9, 1] # 3 slots\n",
     "valuations = [0.8, 0.85, 0.9]\n",
     "rho = 0.25\n",
@@ -724,6 +753,35 @@
     "problem_params = {\"n_users\" : n_users, \"lambdas\" : lambdas,\n",
     "                 \"budget\" : budget, \"valuations\" : valuations,\n",
     "                 \"name_file\" : \"standard_case\"}\n",
+    "\n",
+    "random.seed(42)\n",
+    "\n",
+    "req = Requirement4(problem_params)\n",
+    "req.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Low budget - diffrent valuations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_users = 1000\n",
+    "lambdas = [0.8, 0.9, 1] # 3 slots\n",
+    "valuations = [0.3, 0.6, 0.9]\n",
+    "rho = 0.1\n",
+    "budget = n_users * rho\n",
+    "\n",
+    "problem_params = {\"n_users\" : n_users, \"lambdas\" : lambdas,\n",
+    "                 \"budget\" : budget, \"valuations\" : valuations,\n",
+    "                 \"name_file\" : \"different_valuations\"}\n",
     "\n",
     "random.seed(42)\n",
     "\n",
@@ -744,7 +802,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_users = 10000\n",
+    "n_users = 1000\n",
     "lambdas = [0.8, 0.9, 1] # 3 slots\n",
     "valuations = [0.8, 0.85, 0.9]\n",
     "rho = 0.5\n",
@@ -752,9 +810,9 @@
     "\n",
     "problem_params = {\"n_users\" : n_users, \"lambdas\" : lambdas,\n",
     "                 \"budget\" : budget, \"valuations\" : valuations,\n",
-    "                 \"name_file\" : \"standard_case\"}\n",
+    "                 \"name_file\" : \"high_budget\"}\n",
     "\n",
-    "random.seed(42)\n",
+    "random.seed(137)\n",
     "\n",
     "req = Requirement4(problem_params)\n",
     "req.run()"
@@ -764,7 +822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### few users"
+    "### Very high budget"
    ]
   },
   {
@@ -776,14 +834,72 @@
     "n_users = 1000\n",
     "lambdas = [0.8, 0.9, 1] # 3 slots\n",
     "valuations = [0.8, 0.85, 0.9]\n",
+    "rho = 0.75\n",
+    "budget = n_users * rho\n",
+    "\n",
+    "problem_params = {\"n_users\" : n_users, \"lambdas\" : lambdas,\n",
+    "                 \"budget\" : budget, \"valuations\" : valuations,\n",
+    "                 \"name_file\" : \"very_high_budget\"}\n",
+    "\n",
+    "random.seed(137)\n",
+    "\n",
+    "req = Requirement4(problem_params)\n",
+    "req.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Many Slots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_users = 1000\n",
+    "lambdas = [0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1]\n",
+    "valuations = [0.8, 0.85, 0.9]\n",
     "rho = 0.25\n",
     "budget = n_users * rho\n",
     "\n",
     "problem_params = {\"n_users\" : n_users, \"lambdas\" : lambdas,\n",
     "                 \"budget\" : budget, \"valuations\" : valuations,\n",
-    "                 \"name_file\" : \"standard_case\"}\n",
+    "                 \"name_file\" : \"many_slots\"}\n",
     "\n",
-    "random.seed(42)\n",
+    "random.seed(313)\n",
+    "\n",
+    "req = Requirement4(problem_params)\n",
+    "req.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Slot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_users = 1000\n",
+    "lambdas = [1]\n",
+    "valuations = [0.8, 0.85, 0.9]\n",
+    "rho = 0.25\n",
+    "budget = n_users * rho\n",
+    "\n",
+    "problem_params = {\"n_users\" : n_users, \"lambdas\" : lambdas,\n",
+    "                 \"budget\" : budget, \"valuations\" : valuations,\n",
+    "                 \"name_file\" : \"single_slots\"}\n",
+    "\n",
+    "random.seed(69)\n",
     "\n",
     "req = Requirement4(problem_params)\n",
     "req.run()"
