saved plots from requirement 3

--- a/requirement3_different_demand_curves.ipynb
+++ b/requirement3_different_demand_curves.ipynb
@@ -644,28 +644,7 @@
         "\n",
         "    plt.suptitle(f'Window size: {window_size}')\n",
         "    plt.tight_layout()\n",
-        "    plt.show()\n",
-        "\n",
-        "# # Plotting\n",
-        "# plt.plot(np.arange(T), average_regret, label='Average Regret')\n",
-        "# plt.fill_between(np.arange(T),\n",
-        "#                  average_regret - regret_std_normalized,\n",
-        "#                  average_regret + regret_std_normalized,\n",
-        "#                  alpha=0.3,\n",
-        "#                  label='Uncertainty')\n",
-        "# plt.xlabel('$t$')\n",
-        "# plt.legend()\n",
-        "# plt.title('Cumulative Regret of SW-UCB')\n",
-        "# plt.show()\n",
-        "\n",
-        "# plt.barh(np.arange(K), agent.n_pulls)\n",
-        "# for i in range(N_INTERVALS):\n",
-        "#     plt.axhline(y=best_prices_indices[i], color=COLORS[i], linestyle='--', label=f'Best Price$_{i}$')\n",
-        "# plt.xlabel('Number of Pulls')\n",
-        "# plt.ylabel('Action (Price Index)')\n",
-        "# plt.legend()\n",
-        "# plt.title('Number of Pulls per arm of SW-UCB')\n",
-        "# plt.show()"
+        "    plt.show()"
       ]
     },
     {
